--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
